speaker-verification-service/stomasr/stomasr-ingress-gke.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: stomasr
  namespace: limdongjin
  annotations:
    kubernetes.io/ingress.global-static-ip-name: stomasr-static-ip
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: stomasr
      port:
        number: 80
